--- a/lesson_2/styles/styles.css
+++ b/lesson_2/styles/styles.css
@@ -1,3 +1,113 @@
 body {
   font-family: sans-serif;
 }
+
+.body-1{
+	width: 100%;
+	height: 3216px;
+	z-index: 0;
+	background: #30c1ef;
+	display: block;
+	position: relative;
+	background: url(season.jpg);	
+}
+
+.smile{
+	position: fixed;
+	width: 100%;
+	z-index: 2;
+	margin: 5% 0;
+}
+.top{
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+}
+
+.block-1, .block-2{
+	width: 50%;
+}
+
+.box-1, .box-2{
+	display: block;
+	margin: 0 auto;	
+}
+
+.block-1 .box-1{
+		position: relative;
+		width: 300px;
+		height: 300px;
+		background: #e1e1e1;
+		border: 1px solid #000;
+		border-radius: 100%;
+	}
+
+.block-1 .box-2{
+		position: absolute;
+		width: 150px;
+		height: 150px;
+		background: green;
+		left: 0;
+		margin: 50px;
+		background: #fff;
+		border: 1px solid #000;
+		border-radius: 100%;
+	}
+
+.block-1 .box-3{
+		position: absolute;
+		width: 75px;
+		height: 75px;
+		background: blue;
+		left: 0;
+		top: 0;
+		margin: 20px;
+		background: #000;
+		border-radius: 100%;
+	}
+
+
+.block-2 .box-1{
+		position: relative;
+		width: 400px;
+		height: 400px;
+		background: red;
+	}
+
+.block-2 .box-2{
+		position: absolute;
+		width: 200px;
+		height: 200px;
+		background: green;
+		right: 0;
+		margin: 30px;
+	}
+
+.block-2 .box-3{
+		position: absolute;
+		width: 100px;
+		height: 100px;
+		background: blue;
+		left: 0;
+		bottom: 0;
+		margin: 20px;
+	}
+
+.sml{
+	display: block;
+	width: 40%;
+	height: 200px;
+	margin: 30px auto 0;
+	border: 20px solid #000;
+	border-radius: 100%;
+}
+
+.sml-box-1{
+	position: absolute;
+	height: 50px;
+	width: 50px;
+	background: red;
+	border-radius: 100%;
+}
