--- a/lesson_2/styles/styles.css
+++ b/lesson_2/styles/styles.css
@@ -2,112 +2,118 @@ body {
   font-family: sans-serif;
 }
 
-.body-1{
-	width: 100%;
-	height: 3216px;
-	z-index: 0;
-	background: #30c1ef;
-	display: block;
-	position: relative;
-	background: url(season.jpg);	
+
+h1{
+	text-align: center;
+}
+	
+h2{
+	text-align: center;
+	
 }
 
-.smile{
-	position: fixed;
-	width: 100%;
-	z-index: 2;
-	margin: 5% 0;
-}
-.top{
+.container-flex-1{
 	display: -webkit-flex;
 	display: -moz-flex;
 	display: -ms-flex;
 	display: -o-flex;
 	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	height: 600px;
+	margin: 100px 0;
 }
-
-.block-1, .block-2{
-	width: 50%;
-}
-
-.box-1, .box-2{
-	display: block;
-	margin: 0 auto;	
-}
-
-.block-1 .box-1{
-		position: relative;
-		width: 300px;
-		height: 300px;
-		background: #e1e1e1;
-		border: 1px solid #000;
-		border-radius: 100%;
-	}
-
-.block-1 .box-2{
-		position: absolute;
-		width: 150px;
-		height: 150px;
-		background: green;
-		left: 0;
-		margin: 50px;
-		background: #fff;
-		border: 1px solid #000;
-		border-radius: 100%;
-	}
-
-.block-1 .box-3{
-		position: absolute;
-		width: 75px;
-		height: 75px;
-		background: blue;
-		left: 0;
-		top: 0;
-		margin: 20px;
-		background: #000;
-		border-radius: 100%;
-	}
-
-
-.block-2 .box-1{
-		position: relative;
-		width: 400px;
-		height: 400px;
-		background: red;
-	}
-
-.block-2 .box-2{
-		position: absolute;
-		width: 200px;
-		height: 200px;
-		background: green;
-		right: 0;
-		margin: 30px;
-	}
-
-.block-2 .box-3{
-		position: absolute;
-		width: 100px;
-		height: 100px;
-		background: blue;
-		left: 0;
-		bottom: 0;
-		margin: 20px;
-	}
-
-.sml{
-	display: block;
-	width: 40%;
+.container-flex-1 div{
+	width: 200px;
 	height: 200px;
-	margin: 30px auto 0;
-	border: 20px solid #000;
-	border-radius: 100%;
+	background: #fff90a;
+	margin: 10px;
+	color: #fff;
+	font-size: 40px;
+}
+.container-flex-1 .item-1{
+	align-self: flex-end;
 }
 
-.sml-box-1{
-	position: absolute;
-	height: 50px;
-	width: 50px;
-	background: red;
-	border-radius: 100%;
+.container-flex-1 .item-3{
+	align-self: flex-start;
+}
+
+
+.container-flex-1 .item-5{
+	align-self: flex-end;
+}
+
+
+.container-flex-2{
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	height: 400px;
+	flex-flow: row wrap;
+	margin: 100px 0;
+}
+
+.container-flex-2 div{
+	width: 150px;
+	height: 200px;
+	background: #fff90a;
+	margin: 10px;
+	color: #000;
+	font-size: 40px;
+	order: 1;
+	flex-grow: 1;
+}
+.container-flex-2 .item-8{
+	width: 200px;
+	flex-grow: 2;
+}
+
+.container-flex-2 .item-9{
+	order: 3;
+	flex-grow: 12;
+}
+
+
+.container-flex-3{
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	height: 800px;
+	flex-flow: row wrap;
+	margin: 100px 0;
+	align-items: flex-start;
+}
+
+.container-flex-3 div{
+	width: 400px;
+	height: 200px;
+	background: #061d9d;
+	margin: 10px;
+	color: #fff;
+	font-size: 40px;
+	order: 1;
+	flex-grow: 1;
+	
+}
+
+.container-flex-3 .item-2{
+	height: 500px;
+}
+.container-flex-3 .item1{
+	flex-grow: 6;	
+}
+.container-flex-3 .item2{
+	flex-grow: 4;
 }
