--- a/lesson_2/styles/styles.css
+++ b/lesson_2/styles/styles.css
@@ -1,3 +1,72 @@
 body {
   font-family: sans-serif;
 }
+.flex-container{
+  display: flex;
+  margin: 100px;
+  padding: 20px;
+  border: 1px solid black;
+}
+.flex-container-1{
+  justify-content: space-between;
+  height: 500px;
+  width: 500px;
+}
+
+.flex-element-1 {
+  background-color: yellow;
+  height: 100px;
+  flex-basis: 100px;
+}
+
+.flex-element-1:nth-child(1),
+.flex-element-1:nth-child(5) {
+  align-self: flex-end;
+}
+
+.flex-element-1:nth-child(2),
+.flex-element-1:nth-child(4) {
+  align-self: center;
+}
+
+.flex-element-1:nth-child(3) {
+  align-self: flex-start;
+}
+
+.flex-container-2{
+  height: 200px;
+  width: 600px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.flex-element-2{
+  background-color: yellow;
+  width: 10%;
+  margin: 1%;
+
+}
+.flex-element-2:nth-child(1), .flex-element-2:nth-child(9){
+  background: green;
+}
+.flex-element-2{
+  flex-grow: 1;
+}
+.flex-element-2:nth-child(8), .flex-element-2:nth-child(9){
+  flex-grow: 9;
+}
+.flex-container-3{
+  height: 600px;
+  width: 800px;
+  color: white; 
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.flex-element-3{
+  background: darkblue;
+  width: 30%;
+  height: 30%;
+  margin: 1%;
+}
+.flex-element-3:nth-child(2){
+  height: 60%;
+}
