--- a/lesson_2/задание2/styles/styles.css
+++ b/lesson_2/задание2/styles/styles.css
@@ -1,3 +1,4 @@
+/*  General Styling  */
 
 body {
 	font-family: Tahoma, Arial, sans-serif;
@@ -79,18 +80,29 @@ div {
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
+	align-items: center;
 }
 
 .flex-element {
-	width: 30%;
-	background-color: #1418e0;
+	width: 10%;
+	background-color: yellow;
+	height: 45%;
+}
+.flex-element1 {
+	background-color: #43cf15;
+	width: 100%;
+	height: 45%;
+}
+.flex-element2 {
+	background-color: #43cf15;
+	height: 45%;
+
 }
 
-.block__element1 {
-	height: 300px;
-}
-
-.block__element {
-	height: 150 px;
+.flex-element3 {
+	background-color: yellow;
+	width: 15%;
+	height: 45%;
+	
 }
 
